@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bbop.apollo</groupId>
     <artifactId>apollo</artifactId>
@@ -55,9 +56,9 @@
             <version>1.2</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.tomcat.embed</groupId>-->
-            <!--<artifactId>tomcat-embed-core</artifactId>-->
-            <!--<version>7.0.53</version>-->
+        <!--<groupId>org.apache.tomcat.embed</groupId>-->
+        <!--<artifactId>tomcat-embed-core</artifactId>-->
+        <!--<version>7.0.53</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
@@ -70,22 +71,61 @@
             <version>9.1-901-1.jdbc4</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-            <scope>test</scope>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.tomcat</groupId>-->
-            <!--<artifactId>tomcat-catalina</artifactId>-->
-            <!--<version>7.0.40</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>gbol</groupId>
+            <artifactId>resources</artifactId>
+            <version>1.0</version>
+            <!--<scope>system</scope>-->
+            <!--<systemPath>${project.basedir}/lib/resources.jar</systemPath>-->
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>repo</id>
+            <url>file://${project.basedir}/lib/</url>
+        </repository>
+    </repositories>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
@@ -99,13 +139,6 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<version>2.0</version>-->
-            <!--</plugin>-->
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -115,40 +148,6 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-maven-plugin</artifactId>-->
-                <!--<version>9.1.3.v20140225</version>-->
-                <!--<configuration>-->
-                    <!--<webApp>-->
-                        <!--<defaultsDescriptor>${basedir}/src/main/resources/webdefault.xml</defaultsDescriptor>-->
-                        <!--<contextPath>/dfghdfg</contextPath>-->
-                    <!--</webApp>-->
-                    <!--<classesDirectory>${basedir}/src/main/webapp/WEB-INF/classes</classesDirectory>-->
-                    <!--<webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory>-->
-                    <!--<connectors>-->
-                        <!--<connector implementation="org.eclipse.jetty.server.ServerConnector">-->
-                            <!--<port>8080</port>-->
-                            <!--<maxIdleTime>7000000</maxIdleTime>-->
-                        <!--</connector>-->
-                    <!--</connectors>-->
-                <!--</configuration>-->
-
-                <!--<dependencies>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.ow2.asm</groupId>-->
-                        <!--<artifactId>asm</artifactId>-->
-                        <!--<version>5.0.2</version>-->
-                    <!--</dependency>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.ow2.asm</groupId>-->
-                        <!--<artifactId>asm-commons</artifactId>-->
-                        <!--<version>5.0.2</version>-->
-                    <!--</dependency>-->
-                <!--</dependencies>-->
-
-            <!--</plugin>-->
-
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
@@ -156,10 +155,11 @@
                 <configuration>
                     <port>8080</port>
                     <contextReloadable>true</contextReloadable>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms512m -Xmx2024m -XX:MaxPermSize=1024m</JAVA_OPTS>
+                    </systemProperties>
                 </configuration>
             </plugin>
-        <!--</plugins>-->
-
         </plugins>
     </build>
 </project>
